--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
     "name": "instafrontend",
     "version": "0.1.0",
-    "proxy":"http://localhost:8000",
+    "proxy": "http://localhost:8000",
     "private": true,
     "dependencies": {
-        "@material-ui/core": "^4.11.0",
+        "@material-ui/core": "^4.11.1",
         "@material-ui/icons": "^4.9.1",
         "@testing-library/jest-dom": "^5.11.6",
-        "@testing-library/react": "^11.2.1",
+        "@testing-library/react": "^11.2.2",
         "@testing-library/user-event": "^12.2.2",
+        "@types/jest": "^26.0.15",
+        "@types/node": "^14.14.10",
+        "@types/react": "^17.0.0",
+        "@types/react-dom": "^17.0.0",
         "axios": "^0.21.0",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.0",
+        "typescript": "^4.0.5",
         "web-vitals": "^0.2.4"
     },
     "scripts": {
@@ -39,5 +44,9 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "@types/axios": "^0.14.0",
+        "@types/react-router-dom": "^5.1.6"
     }
 }
