--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "instafrontend",
     "version": "0.1.0",
-    "proxy": "http://localhost:8000",
+    "proxy": "https://hepoku.herokuapp.com/",
     "private": true,
     "dependencies": {
         "@material-ui/core": "^4.11.1",
